--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "8",
+    "storybook-addon-designs": "^6.1.0",
     "tailwindcss": "^2.2.14",
     "typescript": "4.4.2"
   }
