--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/react-modal": "^3.12.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
