--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-modal": "^3.14.3"
   },
   "devDependencies": {
