--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@types/react-modal": "^3.12.1",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-modal": "^3.14.3"
+    "react-modal": "^3.14.3",
+    "socket.io-client": "^4.2.0",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -26,6 +30,7 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^6.3.8",
     "@types/react": "17.0.20",
+    "@types/socket.io-client": "^3.0.0",
     "autoprefixer": "^10.3.4",
     "babel-loader": "^8.2.2",
     "eslint": "7.32.0",
