--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/react-modal": "^3.12.1",
+    "firebase": "^9.1.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
@@ -19,6 +20,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
+    "react-toastify": "^8.0.3",
     "socket.io-client": "^4.2.0",
     "universal-cookie": "^4.0.4"
   },
