--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/react-modal": "^3.12.1",
+    "axios": "^0.23.0",
     "firebase": "^9.1.2",
     "next": "11.1.2",
     "react": "17.0.2",
